[package]
name = "websocket"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "websocket-server"
path = "src/main.rs"



[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4.4"
actix-web-actors = "4.1"
actix-ws = "0.2.5"
awc = "3.2"


dotenv = "0.15"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std","sink"] }
log = "0.4"
printers = "1.2.0"
tokio = { version = "1.24.2", features = ["full"] }


tokio-stream = "0.1.8"

chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
hex="0.4.3"
